Inserção dos campos enum estado, sexo e adição de script para validação do formulário.

--- a/LojaRazor/LojaRazor.csproj
+++ b/LojaRazor/LojaRazor.csproj
@@ -135,6 +135,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Categoria.cs" />
+    <Compile Include="Models\Estado.cs" />
+    <Compile Include="Models\Sexo.cs" />
     <Compile Include="Models\Departamento.cs" />
     <Compile Include="Models\Produto.cs" />
     <Compile Include="Models\Usuario.cs" />
